--- a/CHANGELOG
+++ b/CHANGELOG
@@ -42,7 +42,6 @@
 	-Added simple installer - (tested on debian)
 	-Added MacOSX support to installer
 0.9.7
-	-Changed name schema of log files (xxx_YYYYmmdd-HHMMSS.log)
-	-Added recaplog script to compress and delete old log files
-	-Commands options configurable in /etc/recap
-	-Minor fixes
+    -command line options can be specified in 'Configuration stanza'
+    -timestamp is appended to log filenames
+    -implemented log rotation (see: 'recaplog', rotated log files can be Gzip'd)
