Updating man pages.

--- a/src/recap.5
+++ b/src/recap.5
@@ -160,4 +160,5 @@ vmstat options
 The recap script is maintained by Brent Oswald (brent.oswald@rackspace.com) and Benjamin H. Graham (ben@administr8.me). If you have any questions, comments, or concerns, please let them know or post them to https://github.com/rackerlabs/recap/issues.
 .SH "SEE ALSO"
 .BR recap (8),
+.BR recaplog (8),
 .BR crontab (5)
