--- a/src/recap.8
+++ b/src/recap.8
@@ -47,4 +47,5 @@ The recap script is maintained by Brent Oswald (brent.oswald@rackspace.com) and 
 
 .SH "SEE ALSO"
 .BR recap (5),
+.BR recaplog (8),
 .BR crontab (5)
