--- a/src/recap.8
+++ b/src/recap.8
@@ -19,7 +19,7 @@
 .\" Software Foundation, Inc., 51 Franklin Street, Fifth Floor,
 .\" Boston, MA 02110-1301 USA.
 .\"
-.TH RECAP 8 "October 31, 2013"
+.TH RECAP 8 "July 7, 2017"
 .SH NAME
 recap \- dumps periodic information about running applications and resource usage
 .SH SYNOPSIS
@@ -27,24 +27,27 @@ recap \- dumps periodic information about running applications and resource usag
 .SH DESCRIPTION
 recap is a user-configurable script that can be run once, or run periodically out of cron to dump information about running processes and resource usage. It's useful on servers that have periodic, mysterious performance anomalies for tracking down what may be going on at the time of any particular incident.
 
-The default values for which reports are generated and how many reports are stored can be
+The values for which reports are generated and how many reports are stored can be overriden in
 .IR /etc/recap "."
 The output files from the script are written to
-.IR /var/log/recap "."
+.IR BASEDIR "."
 .TP
 \fB\-B\fR, \fB\-\-backup\fR
-This will perform a "backup". It will copy the latest log files from the last execution to "/var/log/recap/backups". The files will be identified by a timestamp in the name.
+This will perform a "backup". It will copy the latest log files from the last execution to the "backups" directory inside BASEDIR. The files will be identified by a timestamp in the name.
 .TP
 \fB\-S\fR, \fB\-\-snapshot\fR
-This will perform a "snapshot" report. It will generate a set of output files outside of the standard rotation. The files will be identified by a timestamp in the name.
+This will perform a "snapshot" report. It will generate a set of output files in the "snapshot" directory inside BASEDIR outside of the standard rotation. The files will be identified by a timestamp in the name.
 .TP
 .SH FILES
 .nf
 /etc/cron.d/recap
 /etc/recap
-.SH AUTHOR
-The recap script is maintained by Brent Oswald (brent.oswald@rackspace.com) and Benjamin H. Graham (ben@administr8.me). If you have any questions, comments, or concerns, please let them know or post them to https://github.com/rackerlabs/recap/issues.
+.SH "REPORTING BUGS"
+Bugs and issues to be submitted via github
+<https://github.com/rackerlabs/recap/issues>.
 
+.SH AUTHOR
+The recap scripts are maintained by Rackspace, the list of contributors is available at https://github.com/rackerlabs/recap/blob/master/CHANGELOG.md#contributors.
 .SH "SEE ALSO"
 .BR recap (5),
 .BR recaplog (8),
