Adding OPTS_CURL.

--- a/src/recap.5
+++ b/src/recap.5
@@ -151,6 +151,11 @@ Option required by USEMYSQL, USEMYSQLPROCESSLIST, USEINNODB, defines the path to
 Format to display MySQL process list, options are "table" or "vertical". This requires that USEMYSQLPROCESSLIST be set "yes".
 (default: table).
 
+.IP \fBOPTS_CURL\fR
+.br
+Options used by curl, when using USEFULLSTATUS
+(default: '-Ls')
+
 .IP \fBOPTS_DF\fR
 .br
 df options
