--- a/src/recap.5
+++ b/src/recap.5
@@ -188,7 +188,7 @@ netstat options
 
 .IP \fBOPTS_NETSTAT_SUM\fR
 .br
-netstat statics options
+netstat statistics options
 (default: "-s")
 
 .IP \fBOPTS_PS\fR
