Adding version option to manpages

--- a/src/recap.8
+++ b/src/recap.8
@@ -19,7 +19,7 @@
 .\" Software Foundation, Inc., 51 Franklin Street, Fifth Floor,
 .\" Boston, MA 02110-1301 USA.
 .\"
-.TH RECAP 8 "July 7, 2017"
+.TH RECAP 8 "Aug 18, 2017"
 .SH NAME
 recap - dumps periodic information about running applications and resource usage
 .SH SYNOPSIS
@@ -37,6 +37,9 @@ This will perform a "backup". It will copy the latest log files from the last ex
 .TP
 \fB\-S\fR, \fB\-\-snapshot\fR
 This will perform a "snapshot" report. It will generate a set of output files in the "snapshot" directory inside BASEDIR outside of the standard rotation. The files will be identified by a timestamp in the name.
+.TP
+\fB\-V\fR, \fB\-\-version\fR
+Print version and exit.
 .TP
 .SH FILES
 .nf
