Deprecating netstat with nstat in the summary report.

--- a/src/recap.5
+++ b/src/recap.5
@@ -109,7 +109,7 @@ is required by USENETSTATSUM.
 
 .IP \fBUSENETSTATSUM\fR
 .br
-Can be set to yes or no depending on whether or not the output of "netstat ${OPTS_NETSTAT_SUM}" command should be recorded. This report requires that USENETSTAT be set to "yes". This output is written in
+Can be set to yes or no depending on whether or not the output of "nstat ${OPTS_NETSTAT_SUM}" command should be recorded. This report requires that USENETSTAT be set to "yes". This output is written in
 .IR ${BASEDIR}/netstat.log
 (default: no)
 
@@ -183,8 +183,8 @@ netstat options
 
 .IP \fBOPTS_NETSTAT_SUM\fR
 .br
-netstat statistics options
-(default: "\-s")
+nstat statistics options
+(default: "\-a")
 
 .IP \fBOPTS_PS\fR
 .br
