Pre-decommission of /etc/recap in favor of /etc/recap.conf.

--- a/src/recap.5
+++ b/src/recap.5
@@ -28,7 +28,7 @@ recap - dumps periodic information about running applications and resource usage
 recap is a user-configurable script that can be run once, or run periodically out of cron to dump information about running processes and resource usage. It is useful on servers that have periodic, mysterious performance anomalies for tracking down what may be going on at the time of any particular incident.
 
 The default values for which reports are generated and how many reports are stored can be
-.IR /etc/recap "."
+.IR /etc/recap.conf "."
 The output files from the script are written to
 .IR BASEDIR "."
 .SH OPTIONS
