Updating man pages with systemd.timer information.

--- a/src/recap.5
+++ b/src/recap.5
@@ -216,3 +216,4 @@ The recap scripts are maintained by Rackspace, the list of contributors is avail
 .BR recap (8),
 .BR recaplog (8),
 .BR crontab (5)
+.BR systemd.timer (5)
