Remove old config references.

--- a/src/recaplog.8
+++ b/src/recaplog.8
@@ -59,7 +59,7 @@ These can be modified via the config file.
 
 .SH FILES
 .nf
-/etc/recap - The configuration file.
+/etc/recap.conf - The configuration file.
 /etc/cront.d/recap - The cronjob file.
 /usr/lib/systemd/systemd/recaplog.{service,timer} - Unit files for recaplog.
 /var/log/recap/recaplog.log - The recaplog file.
