Fixes based on suggestions in PR #180

--- a/src/recap.8
+++ b/src/recap.8
@@ -17,7 +17,7 @@
 .\" You should have received a copy of the GNU General Public
 .\" License along with this manual; if not, write to the Free
 .\" Software Foundation, Inc., 51 Franklin Street, Fifth Floor,
-.\" Boston, MA 02110\-1301 USA.
+.\" Boston, MA 02110-1301 USA.
 .\"
 .TH RECAP 8 "Aug 18, 2017"
 .SH NAME
@@ -45,7 +45,6 @@ Print version and exit.
 .nf
 /etc/recap.conf
 /etc/cron.d/recap
-/etc/recap
 /usr/lib/systemd/system/recap.{service,timer} \- Unit files for running recap periodically.
 /usr/lib/systemd/system/recap\-onboot.{service,timer} \- Unit files for running recap on boot.
 
