--- a/src/recaplog.8
+++ b/src/recaplog.8
@@ -17,7 +17,7 @@
 .\" You should have received a copy of the GNU General Public
 .\" License along with this manual; if not, write to the Free
 .\" Software Foundation, Inc., 51 Franklin Street, Fifth Floor,
-.\" Boston, MA 02110\-1301 USA.
+.\" Boston, MA 02110-1301 USA.
 .\"
 .TH "RECAPLOG" "8" "Aug 18, 2017"
 
@@ -59,7 +59,7 @@ These can be modified via the config file.
 
 .SH FILES
 .nf
-/etc/recap \- The configuration file.
+/etc/recap.conf \- The configuration file.
 /etc/cront.d/recap \- The cronjob file.
 /usr/lib/systemd/systemd/recaplog.{service,timer} \- Unit files for recaplog.
 /var/log/recap/recaplog.log \- The recaplog file.
