--- a/src/recaptool.8
+++ b/src/recaptool.8
@@ -17,7 +17,7 @@
 .\" You should have received a copy of the GNU General Public
 .\" License along with this manual; if not, write to the Free
 .\" Software Foundation, Inc., 51 Franklin Street, Fifth Floor,
-.\" Boston, MA 02110\-1301 USA.
+.\" Boston, MA 02110-1301 USA.
 .\"
 .TH "RECAPTOOL" "8" "Aug 18, 2017"
 
