--- a/src/recaptool.8
+++ b/src/recaptool.8
@@ -142,5 +142,5 @@ Bugs and issues to be submitted via github
 The recap scripts are maintained by Rackspace, the list of contributors is available at https://github.com/rackerlabs/recap/blob/master/CHANGELOG.md#contributors.
 
 .SH "SEE ALSO"
-.BR recap (5),
+.BR recap.conf (5),
 .BR recap (8),
