--- a/src/recaplog.8
+++ b/src/recaplog.8
@@ -72,7 +72,7 @@ Bugs and issues to be submitted via github
 The recap scripts are maintained by Rackspace, the list of contributors is available at https://github.com/rackerlabs/recap/blob/master/CHANGELOG.md#contributors.
 
 .SH "SEE ALSO"
-.BR recap (5),
+.BR recap.conf (5),
 .BR recap (8),
 .BR crontab (5),
 .BR systemd.timer (5)
