Update iotop default to include -P

--- a/src/recap.conf.5
+++ b/src/recap.conf.5
@@ -167,7 +167,7 @@ iostat options
 .IP \fBOPTS_IOTOP\fR
 .br
 iotop options
-(default: "\-b \-o \-t \-n 3")
+(default: "\-P \-b \-o \-t \-n 3")
 
 .IP \fBOPTS_NETSTAT\fR
 .br
