--- a/src/recap.8
+++ b/src/recap.8
@@ -23,24 +23,44 @@
 .SH NAME
 recap \- dumps periodic information about running applications and resource usage
 .SH SYNOPSIS
-.BI "recap " [OPTION]
+.BI "recap " [OPTIONS]
 .SH DESCRIPTION
 recap is a user\-configurable script that can be run once, or run periodically out of cron or systemd.timers to dump information about running processes and resource usage. It's useful on servers that have periodic, mysterious performance anomalies for tracking down what may be going on at the time of any particular incident.
 
 The values for which reports are generated and how many reports are stored can be overridden in
 .IR /etc/recap.conf "."
 The output files from the script are written to
-.IR BASEDIR "."
+.IR BASEDIR " (default: " /var/log/recap ).
+
+.SH OPTIONS
 .TP
 .BR "\-B, \-\-backup"
 This will perform a "backup". It will copy the latest log files from the last execution to the "backups" directory inside BASEDIR. The files will be identified by a timestamp in the name.
+.TP
+.BI "\-p, \-\-plugin " [ACTIONS]
+Perform plugin related actions: "list", "enable" or "disable".
 .TP
 .BR "\-S, \-\-snapshot"
 This will perform a "snapshot" report. It will generate a set of output files in the "snapshot" directory inside BASEDIR outside of the standard rotation. The files will be identified by a timestamp in the name.
 .TP
 .BR "\-V, \-\-version"
 Print version and exit.
+
+.SH PLUGIN ACTIONS
 .TP
+.BI "list " [TYPE]
+List 'available' (default),'enabled' or 'disabled' plugins.
+.TP
+.BI "enable " [NAME[,NAME]]
+Enable a list of comma separated or 'all' plugins.
+
+Additionally, it will enable the use of plugins
+.RI ( USEPLUGINS="yes" )
+in the config file."
+.TP
+.BI "disable " [NAME[,NAME]]
+Disable a list of comma separated or 'all' plugins.
+
 .SH FILES
 .nf
 /etc/recap.conf
